# snpit

./: .gitignore  AUTHORS.rst  LICENSE  MANIFEST.in  Makefile  Pipfile  README.md  setup.cfg  setup.py  test  tox.ini
example/: determine-lineage.py
lib/: Dassie  East_African_Indian  Indo_Oceanic  LAM  bcg  beijing  bovis  cameroon  canetti  caprae  dassie  dehli  ethiopian  ghana  guuids  haarlem  indo-oceanic  library  library.csv  lineage4  microti  mungi  orygis  out  pinipedii  stype  suricattae  tur  uganda  ural  westafrican1  westafrican2  xtype
snpit/: .gitignore  __init__.py  __main__.py  cli.py  core.py  genotype.py  lineage.py  snpit.py
tests/: test_core.py  test_genotype.py  test_lineage.py  test_snpit.py
tests/test_cases/: empty_multisample.vcf  example.vcf  multi_sample.fa  multi_sample.fa.fai  multisample_test.vcf  single_sample.fa  single_sample.fa.fai  test.vcf  test_library.csv  test_lineage.tsv
