[metadata]
name = snpit
author = Philip Fowler
author_email = philip.fowler@ndm.ox.ac.uk
version = attr: snpit.version.__version__
url = https://github.com/philipwfowler/snpit
description = Whole genome SNP based identification of members of the Mycobacterium tuberculosis complex.
long_description = file: README.md, LICENSE
keywords = Mycobacterium, tuberculosis, lineage, typing, bioinformatics
license = MIT License
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6

[options]
python_requires = '>=3.5'
zip_safe = False
include_package_data = True
packages = find:
setup_requires =
    pysam
install_requires =
    pysam
tests_require =
    pytest
    pysam

[options.package_data]
* = *.md, *.rst, ../lib/*

[options.entry_points]
console_scripts =
    snpit = snpit.__main__:main
